adds thankyou page

--- a/arches.html
+++ b/arches.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="container colorPickerPopup mt-2">
                     <h4 class="text-white" id="pickerTitle">Click to pick your colors:</h4>
-                    <div class="row mt-n2 mx-1"> 
+                    <div class="row mt-n2 mx-1">
 
                         <input type="color" id="colorPicker0" class="col form-control colorPicker">
                         <input type="color" id="colorPicker1" class="col form-control colorPicker">
@@ -105,7 +105,8 @@
                     </select>
                 </div>
                 <div class="row mt-2 form-group">
-                    <label for="archOtherServices" class="col-form-label">Would you like to include any other services?</label>
+                    <label for="archOtherServices" class="col-form-label">Would you like to include any other
+                        services?</label>
                 </div>
                 <div class="row mt-n4">
 
@@ -156,7 +157,8 @@
                             <label for="deliveryCity" class="col-form-label">City</label>
                         </div>
                         <div class="row mt-n4">
-                            <input type="text" value="" class="form-control" placeholder="San Francisco" id="deliveryCity">
+                            <input type="text" value="" class="form-control" placeholder="San Francisco"
+                                id="deliveryCity">
                         </div>
                     </div>
                     <div class="col">
@@ -307,8 +309,10 @@
                     </div>
                 </div>
                 <h3 class="mt-5">Estimated Total: $<span id="archPriceEstimate"></span></h3>
-                <button type="button" id="archFormSubmit"
-                    class="bg-info btn btn-lg col-12 text-white">Submit</button>
+                <a href="thankyou.html">
+                    <button type="button" id="archFormSubmit"
+                        class="bg-info btn btn-lg col-12 text-white">Submit</button>
+                </a>
             </div>
 
         </form>
@@ -367,15 +371,15 @@
                             <div class="form-group row">
                                 <label for="firstNameSubscribe" class="col-form-label sr-only">Name</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control yellow" id="firstNameSubscribe" name="firstNameSubscribe"
-                                        placeholder="Name" />
+                                    <input type="text" class="form-control yellow" id="firstNameSubscribe"
+                                        name="firstNameSubscribe" placeholder="Name" />
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="emailSubscribe" class="col-form-label sr-only">Email</label>
                                 <div class="col-md-10">
-                                    <input type="email" class="form-control yellow" id="emailSubscribe" name="emailSubscribe"
-                                        placeholder="Email" />
+                                    <input type="email" class="form-control yellow" id="emailSubscribe"
+                                        name="emailSubscribe" placeholder="Email" />
                                 </div>
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
