--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,8 @@
 
     <!-- header -->
     <div class="container-fluid contact-header-img">
-        <div class="overlay container-fluid ">
+        <div class="overlay-contact container-fluid ">
             <h1>Contact</h1>
-            <p>San Francisco's Globally-Demanded Balloon Artist</p>
         </div>
 
 
@@ -46,7 +45,7 @@
 
     <!-- Page Content -->
     <div class="container-fluid yellow">
-        <div class="position-relative row justify-content-center contact-row mx-lg-auto">
+        <div class="row justify-content-center contact-row mx-lg-auto">
             <div class="col-sm-4 contact-box">
                 <a href="mailto:kevinsballoons@gmail.com">
                     <i class="fa fa-envelope "></i>
@@ -95,7 +94,7 @@
                             placeholder="What's your message?"></textarea>
                     </div>
                 </div>
-                <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
+                <button class="subscribe btn teal text-white mb-2" type="submit">Submit</button>
             </form>
         </div>
     </div>
