--- a/thankyou.html
+++ b/thankyou.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 
-    <title>Kevin's Balloons</title>
+    <title>Thank You</title>
 </head>
 
 <body>
@@ -20,15 +20,12 @@
     <nav class="navbar navbar-expand-sm navbar-dark p-0 sticky-top ">
         <div class="container-fluid">
             <ul class="mx-auto nav-list pt-0 pt-sm-3 ">
-                <li><a class="nav-link" href="services.html">Services</a></li>
-                <li><a class="nav-link d-none d-sm-block" href="book.html">Book</a></li>
-                <li>
-                    <a class="nav-link" href="index.html" class="navbar-brand">
-                        <img src="img/KBlogo.png" alt="Kevin's Balloons logo" width="100" height="100">
-                    </a>
-                </li>
-                <li><a class="nav-link d-none d-sm-block" href="blog.html">Blog</a></li>
-                <li><a class="nav-link" href="contact.html">Contact</a></li>
+                <li><a class="nav-link  " href="services.html">Services</a></li>
+                <li><a class="nav-link  d-none d-sm-block" href="book.html">Book</a></li>
+                <li><a class="nav-link " href="index.html" class="navbar-brand"><img src="img/KBlogo.png"
+                            alt="Kevin's Balloons logo" width="100" height="100"></a></li>
+                <li><a class="nav-link  d-none d-sm-block" href="blog.html">Blog</a></li>
+                <li><a class="nav-link active " href="contact.html">Contact</a></li>
             </ul>
 
         </div>
@@ -37,118 +34,26 @@
 
 
     <!-- header -->
-    <div class="container-fluid header-img ">
-        <div class="overlay container-fluid ">
-            <h1>Kevin's Balloons</h1>
-            <p>San Francisco's Globally-Demanded Balloon Artist</p>
+    <div class="container-fluid contact-header-img">
+        <div class="overlay-contact container-fluid ">
+            <h1>Thank You</h1>
+            <p>For Booking with Kevin's Balloons</p>
         </div>
 
-        <div class="service-display position-absolute">
-            <img class="first" src="img/servicecarousel-arch.png" alt="Kevin can make balloon arches">
-            <img class="second" src="img/servicecarousel-garland.png" alt="Kevin can make balloon garlands">
-            <img class="third" src="img/servicecarousel-theme.png" alt="Kevin can decorated Themed Parties">
-            <img class="fourth" src="img/servicecarousel-twist.png"
-                alt="Kevin is the top balloon twister in San Francisco">
-        </div>
+
     </div>
-
-
-    <!-- FAB -->
-
-    <button type="button" class="fab btn d-sm-none"><a href="book.html"> Book <span>Kevin</span> Now </a></button>
 
 
     <!-- Page Content -->
-    <div class="container-fluid orange">
-        <div class="container  teal ">
-            <div class="row">
-                <div class="order-2 order-md-1 mx-auto">
-                    <div class="row justify-content-center">
-                        <img src="img/arrowleft.png" alt="" class="tiny ">
-                        <h4 class="text-white ">See Kev in Action</h4>
-                        <img src="img/arrowright.png" alt="" class="tiny ">
-                    </div>
-
-                    <div class="row phone-leaning-container ">
-                        <div class="phone-container mx-auto">
-                            <div class="phone ml-sm-1">
-                                <video width="214px" height="390px" controls>
-                                    <source src="img/vid/balloonCompilation.mp4">
-                                </video>
-                                <!-- <iframe src="img/vid/balloonCompilation.mp4" height="390px" width="214px"
-                                    frameborder="0"></iframe> -->
-                                <div class="row align-items-center justify-content-center ">
-                                    <a class="text-white" href="https://instagram.com/kevins.balloons">
-                                        Follow on Instagram
-                                        <img class="instagram-img" src="img/instagram.png" alt="">
-                                    </a>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="leaning-img-container d-none d-sm-block">
-                            <img class="leaning-img" src="img/kev-transparent-background.png" alt="">
-                        </div>
-                        <button class="btn booking-btn mx-2 mt-n3 mb-2"><a href="book.html">Book Kevin Now</a></button>
-
-                    </div>
-                </div>
-                <div class="col order-1 order-md-2 main-text">
-                    <h1>Get the Best for Your Party</h1>
-                    <h4>Young, fun, and modern balloon art </h4>
-                    <p class="">Bored of the same old balloon dogs and swords? Kevin has spent over 10 years expanding
-                        his
-                        balloon twisting skills, and now he is one of the top balloon artists in the world! <br>
-                        He twisted balloons in Croatia, Mexico, Botswana, California, South Africa, Tennessee, Bulgaria,
-                        and even
-                        at 30,000 ft... just in 2022 alone! If you want a world-famous balloon artist to be
-                        the life of your next event, book him while you can!</p>
-                </div>
-            </div>
+    <div class="container-fluid teal">
+        <div class="d-flex orange justify-content-center py-1 ">
+            <img class="thankyou" src="img/Thankyou.jpg" alt="">
         </div>
     </div>
-
-    <div class="scrolling-gallery-container">
-        <div class="scrolling-gallery">
-            <img src="img/archpinkblue-sq.jpg" alt="" class="initiate-scroll">
-            <img src="img/twisting-duck.jpg" alt="">
-            <img src="img/arch-flowered-sq.jpg" alt="">
-            <img src="img/kev-owl2-sm.jpg" alt="">
-            <img src="img/garland-mylar-yay-sq.jpg" alt="">
-            <img src="img/twisting-frogballoon.jpg" alt="">
-            <img src="img/theme-champagne-sq.jpg" alt="">
-            <img src="img/mylar-18-sq.jpg" alt="">
-            <img src="img/theme-kids-birthday-sq.jpg" alt="">
-            <img src="img/twisting-bike.jpg" alt="">
-            <img src="img/kev-twisting-sq.jpg" alt="">
-            <img src="img/twisting-fish-kite.jpg" alt="">
-            <img src="img/theme-pet-sq.jpg" alt="">
-            <img src="img/theme-mermaid-sq.jpg" alt="">
-            <img src="img/theme-kids-birthday-sq.jpg" alt="">
-            <img src="img/mylar-18-gol-sq.jpg" alt="">
-            <img src="img/archpinkblue-sq.jpg" alt="">
-            <img src="img/twisting-duck.jpg" alt="">
-            <img src="img/arch-flowered-sq.jpg" alt="">
-            <img src="img/kev-owl2-sm.jpg" alt="">
-            <img src="img/garland-mylar-yay-sq.jpg" alt="">
-            <img src="img/twisting-frogballoon.jpg" alt="">
-            <img src="img/theme-champagne-sq.jpg" alt="">
-            <img src="img/mylar-18-sq.jpg" alt="">
-            <img src="img/theme-kids-birthday-sq.jpg" alt="">
-            <img src="img/twisting-bike.jpg" alt="">
-            <img src="img/kev-twisting-sq.jpg" alt="">
-            <img src="img/twisting-fish-kite.jpg" alt="">
-            <img src="img/theme-pet-sq.jpg" alt="">
-            <img src="img/theme-mermaid-sq.jpg" alt="">
-            <img src="img/theme-kids-birthday-sq.jpg" alt="">
-            <img src="img/mylar-18-gol-sq.jpg" alt="">
-        </div>
-    </div>
-
     <div class="container-fluid yellow">
         <div class="container teal justify-content-center">
             <div class="row justify-content-center">
-                <h1>Services</h1>
+                <h1>Check out Kevin's Other Services</h1>
             </div>
             <div class="row service-row ser-yel">
                 <div class="col-4 p-0 justify-content-center d-flex">
@@ -210,8 +115,7 @@
             </div>
         </div>
     </div>
-
-    <div class="container-fluid footer-ad">
+    <div class="container-fluid footer-ad mt-3">
         <!-- Marquee -->
         <div class="row text-center">
             <h4 class="mx-auto px-5 footer-ad-headline">If these folks enjoyed Kevin's Balloons, so will you!</h4>
@@ -232,7 +136,7 @@
                         <img src="img/logo-ben-affleck.png" alt="">
                         <img src="img/logo-nomad-safari.png" alt="">
                         <img src="img/logo-nomadbase.png" alt="">
-                        <img src="img/logo-glassdoor.png" alt="" >
+                        <img src="img/logo-glassdoor.png" alt="">
                         <img src="img/logo-jason-momoa.png" alt="">
                         <img src="img/logo-playboy.png" alt="">
                         <img src="img/logo-jennifer-garner.png" alt="">
@@ -241,7 +145,6 @@
                         <img src="img/logo-bruce-willis.png" alt="">
                     </div>
                 </div>
-                
             </div>
 
             <!-- Subscribe Form & Buttons -->
@@ -255,20 +158,21 @@
                             <div class="form-group row">
                                 <label for="firstNameSubscribe" class="col-form-label sr-only">Name</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control yellow" id="firstNameSubscribe" name="firstNameSubscribe"
-                                        placeholder="Name" />
+                                    <input type="text" class="form-control yellow" id="firstNameSubscribe"
+                                        name="firstNameSubscribe" placeholder="Name" />
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="emailSubscribe" class="col-form-label sr-only">Email</label>
                                 <div class="col-md-10">
-                                    <input type="email" class="form-control yellow" id="emailSubscribe" name="emailSubscribe"
-                                        placeholder="Email" />
+                                    <input type="email" class="form-control yellow" id="emailSubscribe"
+                                        name="emailSubscribe" placeholder="Email" />
                                 </div>
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
                         </form>
-                        <button class="btn col mx-auto btn-lg mb-2 booking-btn">Book Kevin</button>
+                        <button class="btn col mx-auto btn-lg mb-2 booking-btn"><a href="book.html">Book Kevin
+                                Now</a></button>
                     </div>
                 </div>
 
@@ -403,10 +307,10 @@
                     </ul>
                 </div>
 
-                <div class="col-6 p-4 text-center ">
+                <div class="col-6 p-4 text-center">
                     <a role="button" class="btn btn-link mb-4" href="mailto:kevinsballoons@gmail.com">
                         <i class="fa fa-envelope-o"></i><br>
-                       <span class="footer-email"> kevinsballoons@gmail.com</span>
+                        <span class="footer-email"> kevinsballoons@gmail.com</span>
                     </a>
                     <h5>Social</h5>
                     <a class="btn btn-social-icon btn-lg btn-instagram" href="http://instagram.com/kevins.balloons">
