--- a/book.html
+++ b/book.html
@@ -283,7 +283,9 @@
                     </div>
                 </div>
                 <h3 class="mt-5">Estimated Total: $<span id="priceEstimate"></span></h3>
-                <button type="button" id="bookingFormSubmit" class="bg-info btn btn-lg col-12 text-white">Submit</button>
+                <a href="thankyou.html">
+                    <button type="button" id="bookingFormSubmit" class="bg-info btn btn-lg col-12 text-white">Submit</button>
+                </a>
             </div>
 
         </form>
@@ -295,7 +297,7 @@
     <br>
     <br>
     <br>
-  
+
 
 
     <div class="container-fluid footer-ad">
@@ -319,7 +321,7 @@
                         <img src="img/logo-ben-affleck.png" alt="">
                         <img src="img/logo-nomad-safari.png" alt="">
                         <img src="img/logo-nomadbase.png" alt="">
-                        <img src="img/logo-glassdoor.png" alt="" >
+                        <img src="img/logo-glassdoor.png" alt="">
                         <img src="img/logo-jason-momoa.png" alt="">
                         <img src="img/logo-playboy.png" alt="">
                         <img src="img/logo-jennifer-garner.png" alt="">
@@ -341,15 +343,15 @@
                             <div class="form-group row">
                                 <label for="firstNameSubscribe" class="col-form-label sr-only">Name</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control yellow" id="firstNameSubscribe" name="firstNameSubscribe"
-                                        placeholder="Name" />
+                                    <input type="text" class="form-control yellow" id="firstNameSubscribe"
+                                        name="firstNameSubscribe" placeholder="Name" />
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="emailSubscribe" class="col-form-label sr-only">Email</label>
                                 <div class="col-md-10">
-                                    <input type="email" class="form-control yellow" id="emailSubscribe" name="emailSubscribe"
-                                        placeholder="Email" />
+                                    <input type="email" class="form-control yellow" id="emailSubscribe"
+                                        name="emailSubscribe" placeholder="Email" />
                                 </div>
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
