--- a/arches.html
+++ b/arches.html
@@ -93,6 +93,7 @@
                 </div>
                 <div class="row mt-n4">
                     <select name="archSize" id="archSize" class="form-control">
+                    <optgroup label="Organic Arches">
                         <option value="10">12ft Balloon Arch</option>
                         <option value="12">12ft Balloon Decorated Arch</option>
                         <option value="20">20ft Balloon Arch</option>
@@ -100,7 +101,19 @@
                         <option value="30">30ft Balloon Arch</option>
                         <option value="34">30ft Balloon Decorated Arch</option>
                         <option value="40">40ft Balloon Arch</option>
+                    </optgroup>
+                    <optgroup label="Quad Arches">
+                        <option value="10">12ft Balloon Arch</option>
+                        <option value="12">12ft Balloon Decorated Arch</option>
+                        <option value="20">20ft Balloon Arch</option>
+                        <option value="23">20ft Balloon Decorated Arch</option>
+                        <option value="30">30ft Balloon Arch</option>
+                        <option value="34">30ft Balloon Decorated Arch</option>
+                        <option value="40">40ft Balloon Arch</option>
+                    </optgroup>
+                    <optgroup label="Helium Arches">
                         <option value="50">Giant Floating Arch</option>
+                    </optgroup>
 
                     </select>
                 </div>
@@ -231,7 +244,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/arch-flowered-sq.jpg" alt="" class="d-block w-100" />
+                            <img src="img/archgrad.jpg" alt="" class="d-block w-100" />
                         </div>
 
                         <div class="carousel-item">
@@ -242,9 +255,6 @@
                             <img src="img/archpinkblue-sq.jpg" alt="" class="d-block w-100" />
                         </div>
 
-                        <div class="carousel-item">
-                            <img src="img/archoutdoor.jpg" alt="" class="d-block w-100" />
-                        </div>
 
                     </div>
                     <a href="#archCarousel" role="button" data-slide="prev" class="carousel-control-prev">
@@ -309,9 +319,9 @@
                     </div>
                 </div>
                 <h3 class="mt-5">Estimated Total: $<span id="archPriceEstimate"></span></h3>
-                <a href="thankyou.html">
+                <a href="#">
                     <button type="button" id="archFormSubmit"
-                        class="bg-info btn btn-lg col-12 text-white">Submit</button>
+                        class="bg-info btn btn-lg col-12 text-white">Get a Quote</button>
                 </a>
             </div>
 
