--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 
 
     <!-- header -->
-    <div class="container-fluid header-img ">
+    <div class="container-fluid blog-header-img ">
         <div class="overlay container-fluid ">
             <h1>Balloon Blog</h1>
             <p>San Francisco's Globally-Demanded Balloon Artist</p>
@@ -48,35 +48,56 @@
 
 
     <!-- Page Content -->
-    <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div class="service-display position-absolute">
-    <img class="first" src="img/servicecarousel-arch.png" alt="Kevin can make balloon arches">
-    <img class="second" src="img/servicecarousel-garland.png" alt="Kevin can make balloon garlands">
-    <img class="third" src="img/servicecarousel-theme.png" alt="Kevin can decorated Themed Parties">
-    <img class="fourth" src="img/servicecarousel-twist.png" alt="Kevin is the top balloon twister in San Francisco">
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <div class="container">
+        <div class="row blog-row-left mt-3">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+        <div class="row blog-row-right">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+        <div class="row blog-row-left">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+        <div class="row blog-row-right">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+        <div class="row blog-row-left">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+        <div class="row blog-row-right">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+        <div class="row blog-row-left">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+        <div class="row blog-row-right mb-5">
+            <div>
+                <h4>Headline of a Blog Article</h4>
+                <p>This is a blog article about balloon twisting and traveling and maybe both at the smame time, or maybe just one, or maybe just the other, totally depends, but either way I probably should have just used lorem ipsum...</p>
+            </div>
+        </div>
+    </div>
 
 
     <div class="container-fluid footer-ad">
