--- a/clusters.html
+++ b/clusters.html
@@ -91,17 +91,20 @@
                 <div class="row mt-n4">
                     <select name="clusterType" id="clusterType" class="form-control">
                         <option value=""></option>
-                        <optgroup>Floating Helium Clusters</optgroup>
+                    <optgroup label="Floating Helium Clusters">
                         <option value="10">12ft Balloon Arch</option>
                         <option value="12">12ft Balloon Decorated Arch</option>
-                        <optgroup>"Floating" Non-Helium Clusters</optgroup>
+                    </optgroup>
+                    <optgroup label='"Floating" Non-Helium Clusters'>
                         <option value="20">20ft Balloon Arch</option>
                         <option value="23">20ft Balloon Decorated Arch</option>
-                        <optgroup>Ornamental Clusters</optgroup>
+                    </optgroup>
+                    <optgroup label="Ornamental Clusters">
                         <option value="30">30ft Balloon Arch</option>
                         <option value="34">30ft Balloon Decorated Arch</option>
                         <option value="40">40ft Balloon Arch</option>
                         <option value="50">Giant Floating Arch</option>
+                    </optgroup>
 
                     </select>
                 </div>
