--- a/services.html
+++ b/services.html
@@ -47,16 +47,19 @@
 
     <!-- Page Content -->
     <div class="container-fluid yellow">
-        <div class="container teal justify-content-center">
-           
-            <div class="row service-row ser-yel pt-3">
+        <div class="container bg-white justify-content-center">
+            <div class="row justify-content-center">
+                <h1>Services</h1>
+            </div>
+
+            <div class="row service-row ser-yel">
                 <div class="col-4 p-0 justify-content-center d-flex">
                     <a href="arches.html">
                         <img src="img/archpinkblue-sq.jpg" alt="" class="service-img">
                     </a>
                 </div>
                 <div class="col-8 service-text">
-                    <h6>Arches</h6>
+                    <h6>Balloon Arches</h6>
                     <p> Customized balloon arches of any size and specifications.</p>
                     <p class="d-none d-sm-block"> Customize your arch yourself, and Kevin will have it ready for your
                         event, exactly as you want it. <a href="arches.html">learn more</a>
@@ -64,9 +67,37 @@
                 </div>
             </div>
 
-            <div class="row service-row ser-or ">
+            <div class="row service-row ser-or text-right">
                 <div class="col-8 service-text">
-                    <h6>Themed Parties</h6>
+                    <h6>Balloon Clusters</h6>
+                    <p> Decorate a small gift or an open house with a POP of color and pizzazz!</p>
+                    <p class="d-none d-sm-block"> <a href="clusters.html">learn more</a>
+                    </p>
+                </div>
+                <div class="col-4 p-0 justify-content-center d-flex">
+                    <a href="clusters.html">
+                        <img src="img/cluster-girl.jpg" alt="" class="service-img">
+                    </a>
+                </div>
+            </div>
+
+            <div class="row service-row ser-teal  ">
+                <div class="col-4 p-0 justify-content-center d-flex">
+                    <a href="garlands.html">
+                        <img src="img/garland-pink-engagement-sq.jpg" alt="" class="service-img">
+                    </a>
+                </div>
+                <div class="col-8 service-text">
+                    <h6>Garlands</h6>
+                    <p> Give your event that extra pizazz!</p>
+                    <p class="d-none d-sm-block"> Get a single garland or dozens <a href="garlands.html">learn more</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row service-row ser-yel text-right">
+                <div class="col-8 service-text">
+                    <h6>Themed Party Decor</h6>
                     <p> Get your event decked out in custom, themed balloon decor</p>
                     <p class="d-none d-sm-block">Design the decor yourself, or have Kevin design it for you. <a
                             href="themes.html">learn more</a>
@@ -79,34 +110,35 @@
                 </div>
             </div>
 
-            <div class="row service-row ser-yel  ">
+            <div class="row service-row ser-or  ">
                 <div class="col-4 p-0 justify-content-center d-flex">
-                    <a href="garlands.html">
-                        <img src="img/garland-girl.jpg" alt="" class="service-img">
+                    <a href="columns.html">
+                        <img src="img/column-butterfly-sq.jpg" alt="" class="service-img">
                     </a>
                 </div>
                 <div class="col-8 service-text">
-                    <h6>Garlands</h6>
-                    <p> Give your event that extra pizazz!</p>
-                    <p class="d-none d-sm-block"> Get a single garland or dozens <a href="garlands.html">learn more</a>
+                    <h6>Balloon Columns</h6>
+                    <p>Easy and eye-catching balloon columns</p>
+                    <p class="d-none d-sm-block"> create the perfect backdrop for photos <a href="columns.html">learn more</a>
                     </p>
                 </div>
             </div>
 
-            <div class="row service-row ser-or ">
+            <div class="row service-row ser-teal text-right">
                 <div class="col-8 service-text">
-                    <h6>Balloon Twisting</h6>
+                    <h6>Custom Balloon Twisting</h6>
                     <p> Kevin is a world-renowned balloon twister, capable to turning almost any idea into a balloon
                         sculpture</p>
                     <p class="d-none d-sm-block"> <a href="book.html">learn more</a>
                     </p>
                 </div>
-                <div class="col-4 p-0 justify-content-center d-flex mb-3">
+                <div class="col-4 p-0 justify-content-center d-flex">
                     <a href="book.html">
                         <img src="img/kev-bike-sq.png" alt="" class="service-img">
                     </a>
                 </div>
             </div>
+           
         </div>
     </div>
 
