Makes serivce carousel clickable

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a class="nav-link d-none d-sm-block" href="book.html">Book</a></li>
                 <li>
                     <a class="nav-link" href="index.html" class="navbar-brand">
-                        <img src="img/KBlogo.png" alt="Kevin's Balloons logo" width="100" height="100">
+                        <img src="img/KBlogo.png" alt="Kevin's Balloons logo" width="100" height="115">
                     </a>
                 </li>
                 <li><a class="nav-link d-none d-sm-block" href="blog.html">Blog</a></li>
@@ -44,10 +44,10 @@
         </div>
 
         <div class="service-display position-absolute">
-            <img class="first" src="img/servicecarousel-arch.png" alt="Kevin can make balloon arches">
-            <img class="second" src="img/servicecarousel-garland.png" alt="Kevin can make balloon garlands">
-            <img class="third" src="img/servicecarousel-theme.png" alt="Kevin can decorated Themed Parties">
-            <img class="fourth" src="img/servicecarousel-twist.png"
+                <img class="first imglink" src="img/servicecarousel-arch.png" alt="Kevin can make balloon arches">
+                <img class="second imglink" src="img/servicecarousel-garland.png" alt="Kevin can make balloon garlands">
+                <img class="third imglink" src="img/servicecarousel-theme.png" alt="Kevin can decorated Themed Parties">
+                <img class="fourth imglink" src="img/servicecarousel-twist.png"
                 alt="Kevin is the top balloon twister in San Francisco">
         </div>
     </div>
@@ -145,6 +145,8 @@
         </div>
     </div>
 
+
+<!-- Services -->
     <div class="container-fluid yellow">
         <div class="container bg-white justify-content-center">
             <div class="row justify-content-center">
