--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Page Content -->
     <div class="container-fluid orange">
-        <div class="container  teal ">
+        <div class="container rounded teal ">
             <div class="row">
                 <div class="order-2 order-md-1 mx-auto">
                     <div class="row justify-content-center">
