--- a/arches.html
+++ b/arches.html
@@ -22,7 +22,7 @@
             <ul class="mx-auto nav-list pt-0 pt-sm-3 ">
                 <li><a class="nav-link active" href="services.html">Services</a></li>
                 <li><a class="nav-link d-none d-sm-block" href="book.html">Book</a></li>
-                <li><a class="nav-link" href="index.html" class="navbar-brand"><img src="img/KBlogo.png"
+                <li><a class="nav-link" href="index.html" class="navbar-brand"><img src="img/BowtieLogo.png"
                             alt="Kevin's Balloons logo" width="100" height="100"></a></li>
                 <li><a class="nav-link d-none d-sm-block" href="blog.html">Blog</a></li>
                 <li><a class="nav-link" href="contact.html">Contact</a></li>
