--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 
@@ -24,7 +26,7 @@
                 <li><a class="nav-link d-none d-sm-block" href="book.html">Book</a></li>
                 <li>
                     <a class="nav-link" href="index.html" class="navbar-brand">
-                        <img src="img/KBlogo.png" alt="Kevin's Balloons logo" width="100" height="115">
+                        <img src="img/BowtieLogo.png" alt="Kevin's Balloons logo" width="100" height="100">
                     </a>
                 </li>
                 <li><a class="nav-link d-none d-sm-block" href="blog.html">Blog</a></li>
@@ -300,7 +302,7 @@
                             </div>
                             <button class="subscribe btn orange text-white mb-2" type="submit">Submit</button>
                         </form>
-                        <button class="btn col mx-auto btn-lg mb-2 booking-btn">Book Kevin</button>
+                        <a href="book.html"><button class="btn col mx-auto btn-lg mb-2 booking-btn">Book Kevin</button></a>
                     </div>
                 </div>
 
