Cleans up index.html

--- a/book.html
+++ b/book.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-
+    <link rel="stylesheet" href="static/css/main.4256c54b.css">
+    <script src="static/js/main.9f51c705.js"></script>
     <title>Book Now</title>
 </head>
 
@@ -548,6 +549,8 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
+    
+
 </body>
 
 </html>
