--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
 
             <div class="row service-row ser-or text-right">
                 <div class="col-8 service-text">
-                    <h6>Balloon Clusters</h6>
-                    <p> Decorate a small gift or an open house with a POP of color and pizzazz!</p>
-                    <p class="d-none d-sm-block"> <a href="book.html">learn more</a>
+                    <h6>Balloon Columns</h6>
+                    <p> Amaze your guests with balloon columns, short or tall</p>
+                    <p class="d-none d-sm-block">Choose a svelt quad pattern or an organic column and decorate them with Kevin's famouse balloon designs <a href="book.html">learn more</a>
                     </p>
                 </div>
                 <div class="col-4 p-0 justify-content-center d-flex">
                     <a href="book.html">
-                        <img src="img/cluster-girl.jpg" alt="" class="service-img">
+                        <img src="img/column-butterfly-sq.jpg" alt="" class="service-img">
                     </a>
                 </div>
             </div>
@@ -192,44 +192,17 @@
                 </div>
                 <div class="col-8 service-text">
                     <h6>Garlands</h6>
-                    <p> Give your event that extra pizazz!</p>
+                    <p> Give your event that extra pizazz with a stunning balloon garland</p>
                     <p class="d-none d-sm-block"> Get a single garland or dozens <a href="garlands.html">learn more</a>
                     </p>
                 </div>
             </div>
 
+           <br/>
+
             <div class="row service-row ser-yel text-right">
                 <div class="col-8 service-text">
-                    <h6>Themed Party Decor</h6>
-                    <p> Get your event decked out in custom, themed balloon decor</p>
-                    <p class="d-none d-sm-block">Design the decor yourself, or have Kevin design it for you. <a
-                            href="themes.html">learn more</a>
-                    </p>
-                </div>
-                <div class="col-4 p-0 justify-content-center d-flex">
-                    <a href="themes.html">
-                        <img src="img/theme-mermaid-sq.jpg" alt="" class="service-img">
-                    </a>
-                </div>
-            </div>
-
-            <div class="row service-row ser-or  ">
-                <div class="col-4 p-0 justify-content-center d-flex">
-                    <a href="garlands.html">
-                        <img src="img/column-butterfly-sq.jpg" alt="" class="service-img">
-                    </a>
-                </div>
-                <div class="col-8 service-text">
-                    <h6>Balloon Columns</h6>
-                    <p>Easy and eye-catching balloon columns</p>
-                    <p class="d-none d-sm-block"> create the perfect backdrop for photos <a href="columns.html">learn more</a>
-                    </p>
-                </div>
-            </div>
-
-            <div class="row service-row ser-teal text-right">
-                <div class="col-8 service-text">
-                    <h6>Custom Balloon Twisting</h6>
+                    <h6>Custom Centerpieces</h6>
                     <p> Kevin is a world-renowned balloon twister, capable to turning almost any idea into a balloon
                         sculpture</p>
                     <p class="d-none d-sm-block"> <a href="book.html">learn more</a>
@@ -430,7 +403,6 @@
                                 <li><a href="garland.html">Garlands</a></li>
                                 <li><a href="column.html">Columns</a></li>
                                 <li><a href="centerpiece.html">Centerpieces</a></li>
-                                <li><a href="photobooth.html">Photobooths</a></li>
                             </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
